# nova-producer-os

./: .dockerignore  Dockerfile  RENDER_DEPLOY.md  render.yaml
my-agent-cli/: .gitignore  AGENTS.md  PARITY.md  PHILOSOPHY.md  README.md  ROADMAP.md  USAGE.md  install.sh
my-agent-cli/.github/workflows/: release.yml
my-agent-cli/docs/: cannes-demo.md  container.md
my-agent-cli/docs/project-memory/: 00-project-overview.md  01-user-context.md  02-research-synthesis.md  03-approved-plan.md  04-architecture-notes.md  05-current-state.md  06-cook-pattern-reference.md  07-7-agent-crew-spec.md  08-implementation-log.md  09-next-steps.md  10-session-handoff.md
my-agent-cli/producer-app/: REDESIGN_STATUS.md  index.html  package-lock.json  package.json  vite.config.ts
my-agent-cli/producer-app/src/: App.tsx  index.css  types.ts
my-agent-cli/producer-app/src-tauri/: Cargo.toml  tauri.conf.json
my-agent-cli/producer-app/src-tauri/src/: lib.rs  main.rs  state.rs
my-agent-cli/producer-app/src-tauri/src/commands/: approvals.rs  artifacts.rs  dashboard.rs  mod.rs  runs.rs
my-agent-cli/producer-app/src/components/: ApprovalCard.tsx  ArtifactViewer.tsx  (+2 more)
my-agent-cli/rust/: MOCK_PARITY_HARNESS.md  PARITY.md  README.md  TUI-ENHANCEMENT-PLAN.md  USAGE.md
my-agent-cli/rust/crates/tools/: Cargo.toml
my-agent-cli/rust/crates/tools/src/: gemini.rs  lib.rs  producer_plugin.rs
my-agent-cli/rust/crates/tools/tests/: producer_approval_e2e.rs  producer_pipeline_e2e.rs  producer_slate_e2e.rs
my-agent-cli/rust/scripts/: run_mock_parity_harness.sh
nova-producer-os-web/: .env  README.md  test_script.md
nova-producer-os-web/frontend/: package-lock.json  package.json
nova-producer-os-web/frontend/src/: App.tsx  index.css  types.ts
nova-producer-os-web/server/: Cargo.toml
nova-producer-os-web/server/src/: main.rs  state.rs
nova-producer-os-web/server/src/handlers/: approvals.rs  artifacts.rs  dashboard.rs  mod.rs  runs.rs
(+168 files in other folders)
