[package]
name = "nova-producer-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dotenvy = "0.15"

runtime = { path = "../../my-agent-cli/rust/crates/runtime" }
tools = { path = "../../my-agent-cli/rust/crates/tools" }
