[package]
name = "producer-app"
version = "0.1.0"
description = "Producer OS Desktop App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "producer_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"

# Link to the existing Nova workspace crates
runtime = { path = "../../rust/crates/runtime" }
tools = { path = "../../rust/crates/tools" }
chrono = "0.4"
